--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ N&#x103;m
 <li>Kích chuột vào nút <b>Xem lịch năm</b> sẽ hiển thị lịch của cả năm đã chọn. Lịch năm có thể in vừa trên một trang A4 (sử dụng chức năng in của chương trình duyệt).</li>
 <li>Để xem thông tin chi tiết về một ngày, nhấn chuột vào ô hiển thị ngày đó. Nhấn chuột vào dòng thứ hai (chứa tên các ngày trong tuần: CN, T2...) sẽ hiện thông tin về chương trình.</li>
 <li>Nếu cần xem ngày tháng trước 1800 hay từ 2200 trở về sau, bạn có thể sử dụng <a href="../vncal.html">chương trình âm lịch viết bằng Java</a>. Chương trình Java này hỗ trợ nhiều chức năng nâng cao như: so sánh lịch Việt Nam và lịch Trung Quốc, tính âm lịch cho bất kỳ múi giờ nào, tính các thời điểm Sóc và khí tiết, tính giờ Chính Ngọ cho một địa điểm bất kỳ v.v.</li>
-<li>Sử dụng <a href="http://www.informatik.uni-leipzig.de/~duc/amlich/" >source code</a> của Hồ Ngọc Đức</li>
+<li>Sử dụng <a href="http://www.informatik.uni-leipzig.de/~duc/amlich/" >source code</a> của tác giả Hồ Ngọc Đức</li>
 </ul>
 
 <!--
